--- a/SisGes/SisGes/nbproject/project.properties
+++ b/SisGes/SisGes/nbproject/project.properties
@@ -1,6 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -28,10 +28,14 @@ dist.jar=${dist.dir}/SisGes.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-8.0.15.jar=C:\\Users\\Suporte\\Desktop\\mysql-connector-java-8.0.15.jar
+file.reference.mysql-connector-java-8.0.15.jar-1=C:\\Users\\Suporte\\Desktop\\mysql-connector-java-8.0.15.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.15.jar}
+    ${file.reference.mysql-connector-java-8.0.15.jar}:\
+    ${file.reference.mysql-connector-java-8.0.15.jar-1}:\
+    ${libs.eclipselink.classpath}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
