--- a/SisGes/SisGes/nbproject/private/private.properties
+++ b/SisGes/SisGes/nbproject/private/private.properties
@@ -1,3 +1,4 @@
 compile.on.save=true
-file.reference.mysql-connector-java-8.0.15.jar=C:\\Users\\Suporte\\Desktop\\SisGes-20190314T212903Z-001\\SisGes\\SisGes\\lib\\mysql-connector-java-8.0.15.jar
+file.reference.mysql-connector-java-8.0.15.jar=C:\\Users\\Suporte\\Documents\\NetBeansProjects\\SisGes\\SisGes\\SisGes\\lib\\mysql-connector-java-8.0.15.jar
+file.reference.mysql-connector-java-8.0.15.jar-1=C:\\Users\\Suporte\\Documents\\NetBeansProjects\\SisGes\\SisGes\\SisGes\\lib\\mysql-connector-java-8.0.15.jar
 user.properties.file=C:\\Users\\Suporte\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
