--- a/SisGes/SisGes/nbproject/project.properties
+++ b/SisGes/SisGes/nbproject/project.properties
@@ -29,13 +29,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-8.0.15.jar=C:\\Users\\Suporte\\Desktop\\mysql-connector-java-8.0.15.jar
 file.reference.mysql-connector-java-8.0.15.jar-1=C:\\Users\\Suporte\\Desktop\\mysql-connector-java-8.0.15.jar
+file.reference.SisGes-lib=lib
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
     ${file.reference.mysql-connector-java-8.0.15.jar-1}:\
     ${libs.eclipselink.classpath}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.SisGes-lib}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
